[package]
name = "bytes_chain"
version = "1.1.8"
authors = ["ywzjackal@163.com <ywzjackal@163.com>"]
repository = "https://github.com/ywzjackal/bytes_chain"
documentation = "https://docs.rs/bytes_chain/"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/ywzjackal/bytes_chain"
categories = ["data-structures", "encoding"]
description = "Zero copy bytes chain based on crate `bytes`"
keywords = ["bytes", "chain"]
edition = '2018'

[dependencies]
bytes = "0.4"